[package]
name = "mirror_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["http2", "macros", "ws"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }
